ChangeLog
=========

July 8, 2020 : v0.5 released
  - major rewrite (no longer uses Java Compiler)
    - better performance
  - jfDB went under minor changes so we'll have to start over, no automatic upgrade
    - just add 14 zero bytes after the 'JF' header

Sept 19, 2018 : v0.4 released
  - major performance improvements
    - replaced Derby SQL database with a simple NoSQL database (jfDB)
    - tags are now stored in simple objects instead of in SQL
  - Java is included with MSI package so there is no need to install Java

Dec 19, 2017 : v0.3 released
  - fix tag connection issue

July 21,2017 : v0.2 released
  - support Java9

Jul 7,2017 : version 0.1 released!
  - init version released to the public