@@ -8,7 +8,7 @@
   <property name="build" location="classes"/>
   <property name="classpath" location="javaforce.jar"/>
   <property name="jre" location="${home}/jre_base"/>
-  <property name="version" value="0.5"/>
+  <property name="version" value="0.6"/>
 
   <import file="../../base.xml"/>
 
